--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,9 @@ UGTEST_TARGET = test_ug
 # Default build rule
 all: $(TARGET)
 
+all: muon UGburden main
+
+
 $(TARGET): $(SOURCES)
 	$(CXX) -o $@ $(SOURCES) $(CXXFLAGS) $(LDFLAGS)
 
@@ -25,12 +28,21 @@ UGburden: main.cpp LinkDef_rdict.cxx UGburden.cpp
 	$(CXX) -o $@ $^ $(CXXFLAGS) $(LDFLAGS)
 
 
-main: main.cpp LinkDef_rdict.cxx UGburden.cpp
+main: main.cpp LinkDef_rdict.cxx UGburden.cpp LinkDef_rdict.cxx
 	$(CXX) -o $@ $^ $(CXXFLAGS) $(LDFLAGS)
 
 knn_search: read_geometry.c
 	$(CXX) -o $@ $^ -Ivcpkg/installed/x64-linux/include -pthread `root-config --cflags --libs`
 
 
+get_latlon: get_latlon.cpp latLon_To_NorthingEasting.cpp
+	$(CXX) -o $@ $^ -Ivcpkg/installed/x64-linux/include  -I. -pthread `root-config --cflags --libs`
+
+
+LinkDef_rdict.cxx: UGburden.h LinkDef.h
+	rootcling -f $@ -c UGburden.h LinkDef.h
+
+
 clean:
+
 	rm -f $(TARGET) $(UGTEST_TARGET)
